--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**Runtimed** is a web application that statistically analyzes the runtime complexity of a C++ program. It has been created for HowdyHack 2022.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/jonathan-lor/runtimed#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.20"
   }
 }
