--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "proxy": "http://localhost:4000",
+    "proxy": "http://localhost:3001",
     "name": "client",
     "version": "0.1.0",
     "private": true,
@@ -16,7 +16,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
